--- a/.example/app/sail/.example/.env.sail.default.example
+++ b/.example/app/sail/.example/.env.sail.default.example
@@ -2,6 +2,8 @@ SAIL_PROJECT={{SAIL_PROJECT}}
 SAIL_SUBPROJECT={{SAIL_SUBPROJECT}}
 
 SAIL_USERNAME={{SAIL_USERNAME}}
+WWW_USERNAME={{WWW_USERNAME}}
+WWW_GROUPNAME={{WWW_GROUPNAME}}
 
 UBUNTU_CODENAME={{UBUNTU_CODENAME}}
 PHP_VERSION={{PHP_VERSION}}
