--- a/.example/app/sail/docker/app/Dockerfile
+++ b/.example/app/sail/docker/app/Dockerfile
@@ -5,6 +5,8 @@ FROM ubuntu:${UBUNTU_CODENAME}
 ARG UBUNTU_CODENAME
 ARG PHP_VERSION=none
 ARG NODE_VERSION=none
+ARG WWW_USERNAME
+ARG WWW_GROUPNAME
 ARG SAIL_GROUPID
 ARG SAIL_USERID
 ARG SAIL_USERNAME
